--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@hotwired/stimulus": "^3.2.2",
+    "@hotwired/turbo-rails": "^7.2.4",
     "@popperjs/core": "^2.11.8",
     "autoprefixer": "^10.4.16",
     "bootstrap": "^5.3.2",
@@ -19,5 +21,6 @@
   },
   "browserslist": [
     "defaults"
-  ]
+  ],
+  "packageManager": "yarn@1.22.19"
 }
